Updated TryTemperature project settings and Added reference to HardwareMonitor project

--- a/TryTemperature/TryTemperature.csproj
+++ b/TryTemperature/TryTemperature.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Iot.Device.Bindings" Version="3.1.0" />
+    <ProjectReference Include="..\HardwareMonitor\HardwareMonitor.csproj" />
   </ItemGroup>
 
 </Project>
