--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,13 +20,13 @@ jobs:
         run: dotnet --version
 
       - name: Install dependencies
-        run: dotnet add package Iot.Device.Bindings --version 3.1.0
+        run: dotnet add package Iot.Device.Bindings --version 3.1.0 --project WinFormsApp1/WinFormsApp1.csproj
 
       # - name: Install dependencies
       #   run: dotnet restore
 
       - name: Build
-        run: dotnet build
+        run: dotnet build --configuration Release --project WinFormsApp1/WinFormsApp1.csproj
 
       # - name: Test with the dotnet CLI
       #   run: dotnet test
