--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Display dotnet version
         run: dotnet --version
 
-      - name: Install dependencies
-        run: dotnet add package Iot.Device.Bindings --version 3.1.0 --project HardwareMonitor/HardwareMonitor.csproj
+      # - name: Install dependencies
+      #   run: dotnet add package Iot.Device.Bindings --version 3.1.0 --project HardwareMonitor/HardwareMonitor.csproj
 
       # - name: Install dependencies
       #   run: dotnet restore
