--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,7 @@ jobs:
       #   run: dotnet restore
 
       - name: Build
-        run: dotnet build --configuration Release --project WinFormsApp1/WinFormsApp1.csproj
+        run: dotnet run --configuration Release --project WinFormsApp1/WinFormsApp1.csproj
 
       # - name: Test with the dotnet CLI
       #   run: dotnet test
