--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,8 +25,14 @@ jobs:
       # - name: Install dependencies
       #   run: dotnet restore
 
+      - name: Install dependencies
+        run: dotnet restore WinFormsApp1/WinFormsApp1.csproj
+
       - name: Build
-        run: dotnet run --project WinFormsApp1/WinFormsApp1.csproj
+        run: dotnet build WinFormsApp1/WinFormsApp1.csproj
+
+      # - name: Build
+      #   run: dotnet run --project WinFormsApp1/WinFormsApp1.csproj
 
       # - name: Test with the dotnet CLI
       #   run: dotnet test
