--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,16 +31,22 @@ jobs:
       - name: Build
         run: dotnet build WinFormsApp1/WinFormsApp1.csproj
 
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: build-artifacts
+          path: WinFormsApp1/bin/Debug/net8.0
+
       # - name: Build
       #   run: dotnet run --project WinFormsApp1/WinFormsApp1.csproj
 
       # - name: Test with the dotnet CLI
       #   run: dotnet test
 
-      - name: Upload dotnet test results
-        uses: actions/upload-artifact@v4
-        with:
-          name: dotnet-results-8.x
-          path: TestResults-8.x
-        # Use always() to always run this step to publish test results when there are test failures
-        if: ${{ always() }}
+      # - name: Upload dotnet test results
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: dotnet-results-8.x
+      #     path: TestResults-8.x
+      #   # Use always() to always run this step to publish test results when there are test failures
+      #   if: ${{ always() }}
