Update dotnet.yml with new build and test steps

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Commit build artifacts
         run: |
-          git config --local user.email "
+          git config --local user.email ""
           git config --local user.name "GitHub Actions"
           git add -A
           git commit -m "Add build artifacts"
