--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,13 +31,19 @@ jobs:
       - name: Build
         run: dotnet build WinFormsApp1/WinFormsApp1.csproj
 
-      - name: Commit build artifacts
-        run: |
-          git config --local user.email ""
-          git config --local user.name "GitHub Actions"
-          git add -A
-          git commit -m "Add build artifacts"
-          git push
+      - name: Create Release
+        id: create_release
+        uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          files: |
+            WinFormsApp1/bin/Debug/net8.0-windows/WinFormsApp1.exe
+          tag_name: ${{ github.run_id }}
+          release_name: ${{ github.run_id }}
+          body: |
+            Changes in this Release
+            - First release
 
       # - name: Build
       #   run: dotnet run --project WinFormsApp1/WinFormsApp1.csproj
