--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,15 +15,8 @@ jobs:
         with:
           dotnet-version: '8.x'
 
-      # You can test your matrix by printing the current dotnet version
       - name: Display dotnet version
         run: dotnet --version
-
-      # - name: Install dependencies
-      #   run: dotnet add package Iot.Device.Bindings --version 3.1.0 --project HardwareMonitor/HardwareMonitor.csproj
-
-      # - name: Install dependencies
-      #   run: dotnet restore
 
       - name: Install dependencies
         run: dotnet restore WinFormsApp1/WinFormsApp1.csproj
@@ -31,22 +24,11 @@ jobs:
       - name: Build
         run: dotnet publish -r win-x64 -c Release /p:PublishSingleFile=true WinFormsApp1/WinFormsApp1.csproj
 
+      - name: Compress build artifact
+        run: 7z a WinFormsApp1/bin/Release/net8.0-windows/win-x64/publish/WinFormsApp1.zip WinFormsApp1/bin/Release/net8.0-windows/win-x64/publish/WinFormsApp1.exe
+
       - name: Upload build artifact
         uses: actions/upload-artifact@v2
         with:
-          name: WinFormsApp1.exe
-          path: WinFormsApp1/bin/Release/net8.0-windows/win-x64/publish/WinFormsApp1.exe
-
-      # - name: Build
-      #   run: dotnet run --project WinFormsApp1/WinFormsApp1.csproj
-
-      # - name: Test with the dotnet CLI
-      #   run: dotnet test
-
-      # - name: Upload dotnet test results
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: dotnet-results-8.x
-      #     path: TestResults-8.x
-      #   # Use always() to always run this step to publish test results when there are test failures
-      #   if: ${{ always() }}
+          name: WinFormsApp1.zip
+          path: WinFormsApp1/bin/Release/net8.0-windows/win-x64/publish/WinFormsApp1.zip
