--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Upload build artifact
         uses: actions/upload-artifact@v2
         with:
-          name: WinFormsApp1.zip
-          path: WinFormsApp1/bin/Release/net8.0-windows/win-x64/publish/WinFormsApp1.zip
+          name: WinFormsApp1
+          path: WinFormsApp1/bin/Release/net8.0-windows/win-x64/publish
