--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,10 +25,10 @@ jobs:
         run: dotnet publish -r win-x64 -c Release /p:PublishSingleFile=true WinFormsApp1/WinFormsApp1.csproj
 
       - name: Compress build artifact
-        run: 7z a WinFormsApp1/bin/Release/net8.0-windows/win-x64/publish/WinFormsApp1.zip WinFormsApp1/bin/Release/net8.0-windows/win-x64/publish/WinFormsApp1.exe
+        run: 7z a $Env:TEMP/compressed-artifact.zip WinFormsApp1/bin/Release/net8.0-windows/win-x64/publish/WinFormsApp1.exe
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v2
         with:
           name: WinFormsApp1
-          path: WinFormsApp1/bin/Release/net8.0-windows/win-x64/publish
+          path: $Env:TEMP
