Update build commands in dotnet.yml

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,7 +22,7 @@ jobs:
         run: dotnet restore WindowsFormsApp1\WindowsFormsApp1.csproj
 
       - name: Build
-        run: dotnet publish -r win-x64 -c Release /p:PublishSingleFile=true WindowsFormsApp1\WindowsFormsApp1.csproj
+        run: dotnet build WindowsFormsApp1\WindowsFormsApp1.csproj -c Release
 
       # - name: Copy build artifact
       #   run: cp WindowsFormsApp1\bin\Release\net8.0-windows\win-x64\publish\WindowsFormsApp1.exe ${{ runner.temp }}\WindowsFormsApp1.exe
