Update dotnet.yml to include submodule initialization and update

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Display dotnet version
         run: dotnet --version
 
+      - name: Submodule init and update
+        run: git submodule update --init --recursive
+
       - name: Install dependencies
         run: |
           dotnet restore WindowsFormsApp1\WindowsFormsApp1.csproj
