--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,5 +1,3 @@
-name: dotnet package
-
 on: [push]
 
 jobs:
@@ -22,6 +20,9 @@ jobs:
       - name: Restore dependencies
         run: |
           msbuild -t:restore WindowsFormsApp1\WindowsFormsApp1.csproj
+
+      - name: NuGet restore
+        run: nuget restore WindowsFormsApp1\WindowsFormsApp1.sln
 
       - name: Clean
         run: msbuild -t:Clean -p:Configuration=Release WindowsFormsApp1\WindowsFormsApp1.csproj
