--- a/HardwareMonitorCore/OHMService.csproj
+++ b/HardwareMonitorCore/OHMService.csproj
@@ -1,12 +1,14 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+    <LangVersion>12</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Iot.Device.Bindings" Version="3.1.0" />
+    <PackageReference Include="UnitsNet" Version="5.31.0" />
   </ItemGroup>
 
 </Project>
