--- a/TryTemperature/TryTemperature.csproj
+++ b/TryTemperature/TryTemperature.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HardwareMonitor\HardwareMonitor.csproj" />
+    <ProjectReference Include="..\HardwareMonitorCore\HardwareMonitorCore.csproj" />
   </ItemGroup>
 
 </Project>
