--- a/WinFormsApp1/CoreFormsApp1.csproj
+++ b/WinFormsApp1/CoreFormsApp1.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HardwareMonitor\HardwareMonitor.csproj" />
+    <ProjectReference Include="..\HardwareMonitorCore\OHMService.csproj" />
   </ItemGroup>
 
 </Project>
