chore: Refactor project references and namespaces, optimize artifact publishing, and update build commands in dotnet.yml

--- a/HardwareMonitorCore/OHMService.csproj
+++ b/HardwareMonitorCore/OHMService.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="UnitsNet" Version="5.31.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
+  </ItemGroup>
+
 </Project>
